--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ if(message["text"] == "hi") {
 <option>sendVideo</option>
 <option>sendVoice</option>
 <option>unbanChatMember</option>
-</select> <button onclick="OepnApiDoc()" id="OepnApiDocButton">Open API Document</button>;
+</select> <button onclick="OepnApiDoc()" id="OepnApiDocButton">Open API Document</button>
 <br />
 <label for="payload">Payload: </label><br />
 <textarea name="payload" id="payload" placeholder="chat_id=....&text=...."></textarea><br />
