--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>telegram-html-bot</title>
 <!--<script src="res/codemirror.js"></script>
 <script src="res/javascript.js"></script>-->
+<script src="res/biu.min.js"></script>
 <script src="res/json.human.js"></script>
 <script src="res/bot.js"></script>
 <script src="res/display.js"></script>
@@ -11,10 +12,11 @@
 <script src="res/hacks.js"></script>
 <link rel="stylesheet" media="all" href="res/style.css">
 <link rel="stylesheet" media="all" href="res/display.css">
+<link rel="stylesheet" media="all" href="res/biu.css">
 </head>
 <body>
 <div class="bot-display" id="bot-display"></div>
-<div class="bot-panel" id="bot-panel">
+<div class="bot-ui bot-panel" id="bot-panel">
 <label>token: <input type="text" id="token" name="token"></label><br />
 <label>chat_id: <input type="text" id="cid" name="cid"></label> <button onclick="fillChatID()">&lt;-</button> <select name="chatlist" id="chatlist"></select> <br /> 
 <label>parse_mode: <select name="prase" id="prase">
@@ -38,7 +40,7 @@
 <button id="loadSessionButton" onclick="loadSession();">Load Session</button>
 <button id="clearLogButton" onclick="clearLog();">Clear log</button>
 </div>
-<div class="bot-code" id="bot-code">
+<div class="bot-ui bot-code" id="bot-code">
 <label for="code">Write you own code: </label><br />
 <textarea name="code" id="code">
 // The "message" object received from telegram will be pass to your code.
@@ -57,7 +59,7 @@ if(message["text"] == "hi") {
 </textarea><br />
 <button onclick="updateUserCode();" id="updateUserCodeButton" >Update Code</button>
 </div>
-<div class="bot-advance">
+<div class="bot-ui bot-advance">
 <b>Custom API action:</b><br />
 <label for="apimethod">Method: </label>
 <select name="apimethod" id="apimethod">
@@ -87,11 +89,23 @@ if(message["text"] == "hi") {
 <option>sendVideo</option>
 <option>sendVoice</option>
 <option>unbanChatMember</option>
-</select> <button onclick="OepnApiDoc()" id="OepnApiDocButton">Open API Document</button>
+</select> <button onclick="openApiDoc()" id="OepnApiDocButton">Open API Document</button>
 <br />
 <label for="payload">Payload: </label><br />
 <textarea name="payload" id="payload" placeholder="chat_id=....&text=...."></textarea><br />
 <button onclick="sendCustomApi();" id="sendCustomApiButton">Act</button>
+</div>
+<div class="bot-ui bot-file">
+<b>Send/Get file:</b><br />
+<label>File ID: <input type="text" name="fileid" id="fileid"></input></label> 
+<button onclick="downloadFile();" id="downloadFileButton">Download</button> <a id="linkdisp" href="" target="_blank"></a>
+<br>Send File: <select name="sendtype" id="sendtype">
+<option>sendPhoto</option>
+<option>sendSticker</option>
+<option>sendVideo</option>
+<option>sendVoice</option>
+<option>sendDocument</option>
+</select> to <input type="text" name="fileto" id="fileto" placeholder="chat_id"></input> <input type="file" name="tosend" id="tosend"></input> <button onclick="sendFile();" id="sendButton">Send</button>
 </div>
 </body>
 </html>
