Logview design change.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 <script src="res/hacks.js"></script>
 </head>
 <body>
+<div class="bot-ui bot-display-container">
+<b>API Log:</b><br />
 <div class="bot-display" id="bot-display"></div>
+</div>
 <div class="bot-ui bot-panel" id="bot-panel">
 <b>Bot configuration:</b><br />
 <label>token: <input type="text" id="token" name="token"></label><br />
