--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@ if(message["text"] == "/start") {
 <option>getChatMembersCount</option>
 <option>getFile</option>
 <option>getMe</option>
+<option>getUpdates</option>
 <option>getUserProfilePhotos</option>
 <option>kickChatMember</option>
 <option>leaveChat</option>
@@ -87,6 +88,7 @@ if(message["text"] == "/start") {
 <option>sendVenue</option>
 <option>sendVideo</option>
 <option>sendVoice</option>
+<option>setWebhook</option>
 <option>unbanChatMember</option>
 </select> <button onclick="openApiDoc()" id="OepnApiDocButton">Open API Document</button>
 <br />
