--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ if(message["text"] == "/start") {
 		+ message["chat"]["first_name"] : "";
 	setContent("Hi" + msg_str +"! I am a bot running in browser!");
 	sendMessage();
-}</textarea><button onclick="updateUserCode();" id="updateUserCodeButton" >Update Code</button>
+}</textarea><button onclick="updateUserCode();" id="updateUserCodeButton" >Update Code</button> (or Ctrl-S/Command-S)
 </div>
 <div class="bot-ui bot-advance">
 <b>Custom API action:</b><br />
@@ -138,7 +138,7 @@ if(message["text"] == "/start") {
 <div class="bot-ui bot-code" id="bot-code">
 <b>Run code: </b><br />
 <textarea name="evalCode" id="evalCode">
-</textarea><button onclick="eval(evalCode.getValue());" id="evalButton" >eval</button>
+</textarea><button onclick="eval(evalCode.getValue());" id="evalButton" >eval</button> (or Ctrl-Enter/Commnad-Enter)
 </div>
 </div>
 </body>
